--- a/components/shared/navbar/MobileSidebar/MobileSidebar.module.scss
+++ b/components/shared/navbar/MobileSidebar/MobileSidebar.module.scss
@@ -21,7 +21,7 @@
 }
 
 .close_icon_wrapper {
-    height: 80px;
+    height: 90px;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
@@ -111,5 +111,11 @@
         .navlink {
             padding: 1.4rem 1.8rem;
         }
+    }
+}
+
+@media (max-width: 350px) {
+    .close_icon_wrapper{
+        height: 80px;
     }
 }
