--- a/components/shared/Footer/Footer.module.scss
+++ b/components/shared/Footer/Footer.module.scss
@@ -3,6 +3,9 @@
     padding-bottom: 0.5rem;
     position: relative;
 
+    @media (max-width: 700px) {
+        padding-top: 7rem;
+    }
     @media (max-width: 500px) {
         padding-top: 4rem;
     }
@@ -50,23 +53,31 @@
 
     @media (max-width: 330px) {
         >p {
-            font-size: 12px;
+            // font-size: 12px;
             width: 100%;
             white-space: initial;
+            >br{
+                display: none;
+            }
         }
     }
 
-    @media (max-width: 330px) {
-        >p br {
-            display: none;
-        }
-    }
+    // @media (max-width: 330px) {
+    //     >p br {
+    //         display: none;
+    //     }
+    // }
 }
 
 .logo {
     >img {
-        width: 65px;
+        width: 70px;
         height: auto;
+    }
+    @media (max-width: 700px) {
+        >img{
+            width: 60px;
+        }
     }
 }
 
