--- a/components/about-us/locationSection/locationSection.module.scss
+++ b/components/about-us/locationSection/locationSection.module.scss
@@ -66,10 +66,6 @@
         align-items: center;
         max-width: 400px;
 
-        // .contact_btn {
-        //     padding-left: 4rem;
-        //     padding-right: 4rem;
-        // }
     }
 }
 
@@ -118,8 +114,8 @@
 }
 
 .location.location1 {
-    top: 9%;
-    left: 13.9%;
+    top: 11%;
+    left: 11%;
     width: 110px;
     height: 110px;
     transition: all 0.3s ease;
@@ -130,8 +126,8 @@
 }
 
 .location.location2 {
-    top: 11%;
-    left: 2%;
+    top: 15.3%;
+    left: 3.5%;
     width: 95px;
     height: 95px;
     transition: all 0.3s ease;
@@ -143,7 +139,7 @@
 
 .location.location3 {
     top: 41%;
-    left: 39%;
+    left: 46%;
     width: 95px;
     height: 95px;
     transition: all 0.3s ease;
@@ -159,159 +155,236 @@
     }
 }
 
+    
+    
+
 @media (min-width: 1500px) {
     .location.location1 {
-        top: 8.5%;
-        left: 12%;
+        top: 10.5%;
+        left: 9.5%;
     }
-
+    
+    
     .location.location3 {
-        left: 33.5%;
+        top: 40.5%;
+        left: 40.5%;
     }
 }
 
 @media (min-width: 1700px) {
     .location.location1 {
-        // top: 8%;
+        top: 10%;
+        left: 8.2%;
+    }
+    
+    .location.location2 {
+        left: 3.5%;
+    }
+    
+    .location.location3 {
+        left: 36%;
+    }
+}
+
+@media (min-width: 1820px) {
+    .location.location1 {
+        top: 10.5%;
+        left: 7.8%;
+    }
+    
+    .location.location2 {
+        left: 3%;
+    }
+    
+    .location.location3 {
+        left: 33%;
+    }
+}
+
+@media (min-width: 2030px) {
+    .location.location1 {
+        top: 10.5%;
+        left: 7%;
+    }
+    
+    .location.location2 {
+        left: 2.7%;
+    }
+    
+    .location.location3 {
+        left: 29.5%;
+    }
+}
+
+@media (min-width: 2720px) {
+    .location.location1 {
+        top: 10%;
+        left: 5%;
+    }
+    
+    .location.location2 {
+        left: 2%;
+    }
+    
+    .location.location3 {
+        top: 41%;
+        left: 22%;
+    }
+}
+
+@media (min-width: 4050px) {
+    .location.location1 {
+        top: 10.2%;
+        left: 3.2%;
+    }
+    
+    .location.location2 {
+        left: 1%;
+    }
+    
+    .location.location3 {
+        left: 14.8%;
+    }
+}
+@media (min-width: 5300px) {
+    .location.location1 {
+        top: 10.2%;
+        left: 2.5%;
+    }
+    
+    
+    .location.location3 {
         left: 11%;
     }
-
-    .location.location3 {
-        left: 30.5%;
-    }
 }
 
-@media (min-width: 1800px) {
+@media (max-width: 1350px) {
     .location.location1 {
-        // top: 8%;
-        left: 10%;
-    }
-
-    .location.location3 {
-        left: 28.5%;
-    }
-}
-
-@media (min-width: 1900px) {
-    .location.location1 {
-        // top: 8%;
-        left: 9%;
+        left: 10.9%;
     }
 
     .location.location2 {
-        left: 1.3%;
-    }
-
-    .location.location3 {
-        left: 25.5%;
-    }
-}
-
-@media (min-width: 2100px) {
-    .location.location1 {
-        // top: 8%;
-        left: 6.8%;
-    }
-
-    .location.location2 {
-        left: 1.3%;
-    }
-
-    .location.location3 {
-        left: 19%;
-    }
-}
-@media (min-width: 2800px) {
-    .location.location1 {
-        // top: 8%;
-        left: 4.5%;
-        // border: 1px solid red;
-    }
-}
-@media (min-width: 4500px) {
-    .location.location1 {
-        top: 8.8%;
-        left: 3.5%;
-        border: 1px solid red;
-    }
-}
-
-@media (max-width: 1300px) {
-    .location.location3 {
-        // top: 37.5%;
-        left: 40%;
-    }
-}
-
-@media (max-width: 1250px) {
-    .location.location1 {
-        // top: 9%;
-        left: 15.5%;
-    }
-
-    .location.location3 {
-        left: 42%;
-    }
-}
-
-@media (max-width: 1150px) {
-    .location.location1 {
-        // top: 9%;
-        left: 17%;
-    }
-
-    .location.location3 {
-        left: 47%;
-    }
-}
-
-@media (max-width: 1050px) {
-    .location.location1 {
-        // top: 9%;
-        left: 18.5%;
-    }
-
-    .location.location3 {
-        left: 51%;
-    }
-}
-
-@media (max-width: 1000px) {
-    .location.location1 {
-        // top: 9%;
-        left: 19.8%;
-    }
-
-    .location.location3 {
-        left: 54%;
-    }
-}
-
-@media (max-width: 900px) {
-    .location.location1 {
-        // top: 9%;
-        left: 23%;
-    }
-
-    .location.location3 {
-        left: 58%;
-    }
-}
-
-@media (max-width: 850px) {
-    .location.location1 {
-        // top: 9%;
-        left: 24%;
-    }
-
-    .location.location2 {
+        top: 15.3%;
         left: 4%;
     }
 
     .location.location3 {
-        left: 64%;
+        top: 41%;
+        left: 45.5%;
     }
 }
+@media (max-width: 1300px) {
+    .location.location1 {
+        top: 10.3%;
+        left: 11.3%;
+    }
+
+    .location.location2 {
+        top: 16%;
+        left: 4.5%;
+    }
+
+    .location.location3 {
+        left: 48%;
+    }
+}
+@media (max-width: 1250px) {
+    .location.location1 {
+        top: 10.5%;
+        left: 11.7%;
+    }
+
+    .location.location2 {
+        top: 16%;
+        left: 4.5%;
+    }
+
+    .location.location3 {
+        left: 50%;
+    }
+}
+@media (max-width: 1200px) {
+    .location.location1 {
+        left: 12%;
+    }
+
+    .location.location2 {
+        top: 15.5%;
+    }
+
+    .location.location3 {
+        left: 53%;
+    }
+}
+@media (max-width: 1150px) {
+    .location.location1 {
+        left: 13%;
+    }
+
+    .location.location2 {
+        top: 15.5%;
+    }
+
+    .location.location3 {
+        left: 56%;
+    }
+}
+@media (max-width: 1060px) {
+    .location.location1 {
+        left: 14%;
+    }
+
+    .location.location2 {
+        top: 15.5%;
+    }
+
+    .location.location3 {
+        left: 60%;
+    }
+}
+@media (max-width: 980px) {
+    .location.location1 {
+        left: 15%;
+    }
+
+    .location.location2 {
+        top: 16%;
+        left: 5%;
+    }
+
+    .location.location3 {
+        left: 65%;
+    }
+}
+@media (max-width: 920px) {
+    .location.location1 {
+        left: 16%;
+    }
+
+    .location.location2 {
+        top: 16%;
+        left: 7%;
+    }
+
+    .location.location3 {
+        left: 70%;
+    }
+}
+@media (max-width: 850px) {
+    .location.location1 {
+        left: 17%;
+    }
+
+    .location.location2 {
+        top: 16%;
+        left: 7%;
+    }
+
+    .location.location3 {
+        left: 75%;
+    }
+}
+
 
 @media (max-width: 800px) {
     .columns {
@@ -359,57 +432,55 @@
     }
 
     .location.location1 {
-        // top: 9%;
-        left: 10%;
+        top: 11.5%;
+        left: 8%;
         width: 90px;
         height: 90px;
     }
 
     .location.location2 {
+        top: 15%;
+        left: 3%;
         width: 80px;
         height: 80px;
-        top: 11%;
-        left: 1.5%;
     }
 
     .location.location3 {
+        left: 33%;
         width: 80px;
         height: 80px;
-        // top: 38%;
-        left: 29%;
     }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 730px) {
     .location.location1 {
-        // top: 9%;
-        left: 11%;
+        top: 11.5%;
+        left: 9%;
     }
 
+
     .location.location3 {
-        left: 29%;
+        left: 36%;
     }
 }
 
-@media (max-width: 700px) {
-    .location.location1 {
-        // top: 9%;
-        left: 12%;
-    }
+@media (max-width: 670px) {
+
 
     .location.location3 {
-        left: 34%;
+        left: 39%;
     }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 640px) {
     .location.location1 {
-        // top: 9%;
-        left: 13%;
+        top: 11.5%;
+        left: 10%;
     }
 
+
     .location.location3 {
-        left: 35%;
+        left: 41%;
     }
 }
 
@@ -433,52 +504,74 @@
         }
     }
 
+    .location{
+        &::after {
+            width: 12px;
+            height: 12px;
+        }
+    }
+
     .location.location1 {
-        top: 6.5%;
-        left: 10.5%;
+        top: 8.5%;
+        left: 8%;
     }
 
     .location.location2 {
-        top: 9%;
-        left: 0.7%;
+        top: 13%;
+        left: 2.5%;
     }
 
     .location.location3 {
         top: 39%;
-        left: 31%;
+        left: 37%;
     }
 }
 
 @media (max-width: 550px) {
     .location.location1 {
-        // top: 6.5%;
-        left: 12.5%;
+        top: 8.5%;
+        left: 9%;
+    }
+
+    .location.location2 {
+        top: 13%;
+        left: 2.5%;
     }
 
     .location.location3 {
-        left: 34%;
+        left: 41%;
     }
 }
 
 @media (max-width: 500px) {
     .location.location1 {
-        // top: 6.5%;
-        left: 13.5%;
+        left: 10%;
+    }
+
+    .location.location2 {
+        top: 13.5%;
     }
 
     .location.location3 {
-        left: 38%;
+        left: 44%;
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 460px) {
     .location.location1 {
-        // top: 6.5%;
-        left: 15%;
+        left: 11%;
     }
 
+
     .location.location3 {
-        left: 42.5%;
+        left: 48%;
+    }
+}
+@media (max-width: 440px) {
+
+
+    .location.location3 {
+        left: 51.5%;
     }
 }
 
@@ -506,46 +599,49 @@
     }
 
     .location.location1 {
-        top: 9%;
-        left: 18%;
+        top: 11.5%;
+        left: 14%;
         width: 80px;
         height: 80px;
     }
 
     .location.location2 {
+        top: 16.5%;
+        left: 5.5%;
         width: 65px;
         height: 65px;
-        top: 12.5%;
-        left: 3.5%;
     }
 
     .location.location3 {
+        top: 42%;
+        left: 59%;
         width: 65px;
         height: 65px;
-        top: 42%;
-        left: 51%;
     }
 }
 
 @media (max-width: 360px) {
     .location.location1 {
-        // top: 9%;
-        left: 20%;
+        left: 15%;
     }
 
+
     .location.location3 {
-        left: 57%;
+        left: 65.5%;
     }
 }
 
 @media (max-width: 330px) {
     .location.location1 {
-        // top: 9%;
-        left: 21.5%;
+        left: 16%;
+    }
+
+    .location.location2 {
+        left: 6%;
     }
 
     .location.location3 {
-        left: 60%;
+        left: 70%;
     }
 
     .column1 {
@@ -555,29 +651,33 @@
     }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 310px) {
     .location.location1 {
-        top: 9.5%;
-        left: 25.5%;
+        left: 17.5%;
     }
 
     .location.location2 {
-        left: 4.5%;
+        left: 6.5%;
     }
 
     .location.location3 {
-        left: 66%;
+        left: 75%;
     }
 }
 
-@media (max-width: 270px) {
+@media (max-width: 285px) {
     .location.location1 {
-        // top: 9%;
-        left: 28%;
+        left: 18.5%;
+    }
+
+    .location.location2 {
+        top: 17%;
+        left: 7%;
     }
 
     .location.location3 {
-        left: 72%;
+        top: 43%;
+        left: 80%;
     }
 }
 
@@ -598,7 +698,6 @@
     opacity: 1 !important;
     z-index: 99;
     max-width: 230px;
-    // animation: fadeIn 1s ease forwards;
 }
 
 .tooltip_content {
