--- a/components/landingPage/mapSection/mapSection.module.scss
+++ b/components/landingPage/mapSection/mapSection.module.scss
@@ -50,8 +50,8 @@
 }
 
 .location.location1 {
-    top: 21%;
-    left: 41.5%;
+    top: 23.5%;
+    left: 39.5%;
     transform: translateX(-50%);
     width: 110px;
     height: 110px;
@@ -64,8 +64,8 @@
 }
 
 .location.location2 {
-    top: 7.7rem;
-    left: 33.1%;
+    top: 32.5%;
+    left: 35%;
     transform: translateX(-50%);
     width: 95px;
     height: 95px;
@@ -78,8 +78,8 @@
 }
 
 .location.location3 {
-    bottom: 3rem;
-    left: 54%;
+    bottom: 9%;
+    left: 56.5%;
     width: 95px;
     height: 95px;
     transition: all 0.3s ease;
@@ -89,279 +89,338 @@
     }
 }
 
-@media (min-width: 1350px) {
-    // .location.location1 {
-    //     // top: 22%;
-    //     left: 42.2%;
-    // }
-    .location.location2 {
-        left: 33.5%;
-    }
-}
 
 @media (min-width: 1450px) {
     .location.location1 {
-        // top: 22%;
-        left: 43%;
+        left: 40.5%;
     }
-    .location.location2 {
-        left: 35%;
-    }
-}
 
-@media (min-width: 1550px) {
-    .location.location1 {
-        // top: 22%;
-        left: 43.5%;
-    }
     .location.location2 {
-        top: 8rem;
-        left: 36%;
+        top: 32%;
+        left: 36.5%;
+    }
+    .location.location3 {
+        left: 56%;
     }
 }
 
 @media (min-width: 1650px) {
     .location.location1 {
-        // top: 22%;
-        left: 40%;
+        top: 23%;
+        left: 41.5% !important;
     }
+
     .location.location2 {
-        left: 37%;
+        top: 31%;
+        left: 38% !important;
+    }
+    .location.location3 {
+        left: 55%;
     }
 }
 
-@media (min-width: 1700px) {
-    .location.location1 {
-        // top: 22%;
-        left: 43.2%;
-    }
-    .location.location2 {
-        left: 36.7%;
-    }
-}
+
+
+
 
 @media (min-width: 1750px) {
     .location.location1 {
-        // top: 22%;
-        left: 43.5%;
-    }
-    .location.location2 {
-        left: 37.5%;
+        top: 23%;
+        left: 42% !important;
     }
 
+    .location.location2 {
+        top: 30.5%;
+        left: 38.5% !important;
+    }
+}
+
+
+
+
+
+@media (min-width: 2000px) {
+    .location.location1 {
+        left: 43% !important;
+    }
+    .location.location2 {
+        top: 31.3%;
+        left: 40% !important;
+    }
+    .location.location3 {
+        left: 54.2%;
+    }
+}
+
+@media (min-width: 2700px) {
+    .location.location1 {
+        top: 23.4%;
+        left: 44.75% !important;
+    }
+    .location.location2 {
+        top: 32%;
+        left: 42.5% !important;
+    }
     .location.location3 {
         left: 53%;
     }
 }
-
-@media (min-width: 1850px) {
-
-    .location.location2 {
-        left: 39%;
-    }
-}
-
-@media (min-width: 1950px) {
+@media (min-width: 4000px) {
     .location.location1 {
-        // top: 22%;
-        left: 44.5%;
+        left: 46.5% !important;
     }
     .location.location2 {
-        left: 39%;
+        left: 45% !important;
     }
-}
-
-@media (min-width: 2050px) {
-    .location.location1 {
-        // top: 22%;
-        left: 45.8%;
-    }
-    .location.location2 {
-        left: 41.5%;
-    }
-
     .location.location3 {
         left: 52.2%;
     }
 }
-
-@media (min-width: 3000px) {
+@media (min-width: 5400px) {
     .location.location1 {
-        // top: 22%;
-        left: 47.2%;
+        left: 47.35% !important;
     }
     .location.location2 {
-        left: 44.5%;
+        top: 31.5%;
+        left: 46.2% !important;
+    }
+    .location.location3 {
+        bottom: 8.6%;
+        left: 51.6%;
     }
 }
 
-@media (min-width: 5000px) {
+
+
+@media (max-width: 1320px) {
     .location.location1 {
-        // top: 22%;
-        left: 47.9%;
+        left: 39%;
     }
+    
     .location.location2 {
-        left: 46%;
+        left: 34.5%;
     }
+    
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1260px) {
     .location.location1 {
-        // top: 21%;
-        left: 41%;
+        left: 38.5%;
     }
-
+    
     .location.location2 {
-        left: 32%;
+        left: 33.5%;
     }
+    
 }
 
 @media (max-width: 1200px) {
     .location.location1 {
-        left: 40%;
-    }
-
-    .location.location2 {
-        left: 30%;
-    }
-}
-
-@media (max-width: 1100px) {
-    .location.location1 {
-        left: 39%;
-    }
-
-    .location.location2 {
-        left: 29%;
-    }
-}
-
-@media (max-width: 1000px) {
-    .location.location1 {
         left: 38%;
     }
+    
     .location.location2 {
-        left: 26%;
+        left: 33%;
+    }
+    
+    .location.location3 {
+        left: 57%;
     }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1150px) {
     .location.location1 {
-        left: 37%;
+        left: 37.3%;
     }
+    
+    .location.location2 {
+        left: 32.3%;
+    }
+    
+}
+@media (max-width: 1100px) {
+    .location.location1 {
+        left: 36.5%;
+    }
+    
+    .location.location2 {
+        top: 32%;
+        left: 31%;
+    }
+    
+    .location.location3 {
+        left: 58%;
+    }
+}
+@media (max-width: 1040px) {
+    .location.location1 {
+        left: 35.5%;
+    }
+    
+    .location.location2 {
+        top: 32%;
+        left: 30%;
+    }
+    
+    .location.location3 {
+        left: 58.5%;
+    }
+}
+@media (max-width: 980px) {
+    .location.location1 {
+        left: 35%;
+    }
+    
+    .location.location2 {
+        top: 32%;
+        left: 28%;
+    }
+    
+    .location.location3 {
+        left: 59%;
+    }
+}
+@media (max-width: 920px) {
+    .location.location1 {
+        left: 34%;
+    }
+    
+    .location.location2 {
+        left: 27%;
+    }
+    
+}
+@media (max-width: 860px) {
+    .location.location1 {
+        left: 32.5%;
+    }
+    
+    .location.location2 {
+        left: 25.5%;
+    }
+    
+    .location.location3 {
+        left: 60.5%;
+    }
+}
+@media (max-width: 800px) {
+    .location.location1 {
+        left: 31.5%;
+    }
+    
     .location.location2 {
         left: 24%;
     }
 }
-
-@media (max-width: 820px) {
+@media (max-width: 750px) {
     .location.location1 {
-        left: 35%;
+        left: 30%;
     }
+    
     .location.location2 {
-        left: 22%;
+        left: 21.5%;
+    }
+    
+    .location.location3 {
+        left: 62%;
     }
 }
-
-@media (max-width: 780px) {
+@media (max-width: 700px) {
     .location.location1 {
-        left: 34%;
+        left: 29%;
     }
+    
     .location.location2 {
-        left: 20%;
+        left: 19%;
+    }
+    
+    .location.location3 {
+        left: 62.5%;
     }
 }
-
-@media (max-width: 720px) {
+@media (max-width: 650px) {
     .location.location1 {
-        left: 33.5%;
+        left: 26.8%;
     }
-
+    
     .location.location2 {
         left: 17%;
     }
-}
-
-@media (max-width: 660px) {
-    .location.location1 {
-        left: 32%;
-    }
-    .location.location2 {
-        left: 14%;
-    }
-
+    
     .location.location3 {
-        // bottom: 5rem;
-        left: 58%;
+        bottom: 9.5%;
+        left: 64%;
     }
 }
-
-@media (max-width: 620px) {
+@media (max-width: 580px) {
     .location.location1 {
-        left: 31%;
+        top: 24.5%;
     }
-
+    
     .location.location2 {
-        left: 12%;
+        top: 33%;
+        left: 16%;
+    }
+    
+    .location.location3 {
+        bottom: 10%;
+        left: 64.5%;
     }
 }
-
-@media (max-width: 600px) {
-    .location.location1 {
-        top: 22%;
-        left: 30.5%;
-    }
-
-    .location.location2 {
-        top: 8.5rem;
-    }
-}
-
 @media (max-width: 550px) {
     .location.location1 {
-        top: 23.5%;
-        // left: 30%;
+        top: 26%;
     }
-
+    
     .location.location2 {
-        top: 9.5rem;
+        top: 33.5%;
+        left: 15%;
     }
-
+    
     .location.location3 {
-        bottom: 4rem;
-        left: 56%;
+        bottom: 12%;
     }
 }
-
 @media (max-width: 500px) {
     .location.location1 {
-        top: 25%;
-        // left: 30%;
+        top: 27%;
     }
-
+    
     .location.location2 {
-        top: 10rem;
+        top: 33.5%;
+        left: 15.6%;
     }
-
+    
     .location.location3 {
-        bottom: 4.5rem;
-        left: 55%;
+        bottom: 14%;
+        left: 63%;
     }
 }
-
+@media (max-width: 480px) {
+    .location.location1 {
+        top: 28%;
+    }
+    
+    .location.location2 {
+        top: 34.5%;
+    }
+    
+    .location.location3 {
+        bottom: 15%;
+    }
+}
 @media (max-width: 450px) {
     .location.location1 {
-        top: 26.5%;
-        // left: 30%;
+        top: 29%;
     }
-
+    
     .location.location2 {
-        top: 10.5rem;
+        top: 35%;
     }
-
+    
     .location.location3 {
-        bottom: 5.5rem;
-        left: 55%;
+        bottom: 16.8%;
+        left: 61.5%;
     }
 }
 
@@ -371,21 +430,20 @@
     }
 
     .location.location1 {
-        top: 31.5%;
-        // left: 30%;
+        top: 34%;
         width: 90px;
         height: 90px;
     }
 
     .location.location2 {
-        top: 12rem;
+        top: 39%;
         width: 75px;
         height: 75px;
     }
 
     .location.location3 {
-        bottom: 6rem;
-        left: 55%;
+        bottom: 17.5%;
+        left: 63.5%;
         width: 75px;
         height: 75px;
     }
@@ -397,8 +455,7 @@
     }
 
     .location.location1 {
-        top: 35%;
-        // left: 30%;
+        top: 37%;
         width: 80px;
         height: 80px;
     }
@@ -411,20 +468,19 @@
     }
 
     .location.location2 {
-        top: 13rem;
+        top: 42.5%;
         width: 65px;
         height: 65px;
     }
 
     .location.location3 {
-        bottom: 6.6rem;
-        left: 57%;
+        bottom: 18.5%;
         width: 65px;
         height: 65px;
     }
 }
 
-@media (max-width: 340px) {
+@media (max-width: 350px) {
     .heading_wrapper {
         margin-bottom: -5rem;
     }
@@ -434,21 +490,19 @@
     }
 
     .location.location1 {
-        top: 42%;
-        // left: 30%;
+        top: 44%;
         width: 70px;
         height: 70px;
     }
 
     .location.location2 {
-        top: 14rem;
+        top: 49%;
         width: 55px;
         height: 55px;
     }
 
     .location.location3 {
-        bottom: 4.5rem;
-        // left: 52%;
+        bottom: 14%;
         width: 55px;
         height: 55px;
     }
@@ -460,20 +514,16 @@
     }
 
     .location.location1 {
-        top: 43%;
-        // left: 30%;
+        top: 44.5%;
     }
 
     .location.location2 {
-        top: 15rem;
+        top: 50%;
     }
 
-    // .location.location3 {
-    //     bottom: 6rem;
-    //     // left: 52%;
-    //     // width: 55px;
-    //     // height: 55px;
-    // }
+    .location.location3 {
+        bottom: 15.5%;
+    }
 }
 
 @media (max-width: 290px) {
@@ -481,20 +531,17 @@
         margin-bottom: -7rem;
     }
 
-    // .location.location1 {
-    //     top: 44%;
-    //     // left: 30%;
-    // }
+    .location.location1 {
+        top: 45.5%;
+    }
 
     .location.location2 {
-        top: 15.3rem;
+        top: 50.5%;
     }
 
     .location.location3 {
-        bottom: 5.2rem;
-        left: 56%;
-        // width: 55px;
-        // height: 55px;
+        bottom: 17%;
+        left: 63%;
     }
 }
 
@@ -504,17 +551,16 @@
     }
 
     .location.location1 {
-        top: 44.5%;
-        // left: 30%;
+        top: 46.5%;
     }
 
     .location.location2 {
-        top: 15.3rem;
+        top: 51.5%;
     }
 
     .location.location3 {
-        bottom: 5.8rem;
-        // left: 56%;
+        bottom: 18%;
+        left: 62%;
     }
 }
 
