--- a/components/landingPage/heroSection/heroSection.module.scss
+++ b/components/landingPage/heroSection/heroSection.module.scss
@@ -39,7 +39,7 @@
         line-height: 1.2;
         // border: 2px solid blue;
 
-        @media (max-width: 1250px) {
+        @media (max-width: 1000px) {
             >br {
                 display: none;
             }
@@ -109,8 +109,8 @@
 
     .hero_image {
         position: absolute;
-        top: 29%;
-        left: -57%;
+        top: 20%;
+        left: -78%;
         // border: 2px solid red;
     }
 
@@ -213,7 +213,7 @@
 
         .hero_image {
             top: 33%;
-            left: -100%;
+            left: -135%;
         }
 
         // .video_wrapper{
@@ -223,6 +223,23 @@
         .video {
             width: 290px;
             height: 170px;
+        }
+    }
+}
+@media (max-width: 1100px) {
+    .hero_right {
+        .hero_image {
+            // top: 33%;
+            left: -123%;
+            .image_container {
+                width: 350px;
+                height: 350px;
+
+                >img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
         }
     }
 }
@@ -241,7 +258,7 @@
     .hero_right {
         width: 100%;
         position: absolute;
-        top: 52%;
+        top: 40%;
         right: 0;
 
         .hero_image {
@@ -368,10 +385,11 @@
         .hero_image {
             position: initial;
             order: 2;
-            margin-top: 0;
+            margin-top: 1.5rem !important;
             margin-right: 0;
             // transform: translateX(-50px);
             margin-left: -40px;
+            // border: 2px solid red;
         }
     }
 }
