--- a/components/get-offers/getOffers.module.scss
+++ b/components/get-offers/getOffers.module.scss
@@ -1,13 +1,29 @@
-.get_offers_container {
+.parent_container{
+    margin-top: 2rem;
+    margin-bottom: 6rem;
+    padding-top: 2rem;
+    position: relative;
+}
+
+.image_bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -999;
+}
+
+.get_offers_card {
     max-width: 700px;
     border: 1px solid #005f3136;
     border-radius: 20px;
     padding: 2rem;
-    // padding-bottom: 3rem;
     text-align: left;
-    margin: 4rem auto 5rem auto;
+    margin: 2.5rem auto 3rem auto;
+    background-color: var(--white);
 }
-.get_offers_container.green_border{
+.get_offers_card.green_border{
     border-color: var(--color-primary);
 }
 
@@ -33,8 +49,6 @@
     align-items: center;
     gap: 0.5rem;
     padding-left: 1rem;
-    // margin-top: 2rem;
-    // margin-bottom: 1rem;
 
     >input {
         border: none;
@@ -105,7 +119,6 @@
 }
 
 .step_6_option {
-    // border: 2px solid red;
     margin-bottom: 1rem;
     &:last-child{
         margin-bottom: initial;
@@ -125,7 +138,6 @@
         align-items: center;
         justify-content: space-between;
         gap: 1rem;
-        // cursor: pointer;
         transition: all 0.3s ease-in-out;
         color: var(--black);
         font-size: 1.2rem;
@@ -219,8 +231,18 @@
     }
 }
 
+.description {
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: var(--text-primary);
+    text-align: center;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 @media (max-width: 600px) {
-    .get_offers_container {
+    .get_offers_card {
         padding: 1.5rem;
         border-radius: 10px;
         margin-top: 3rem;
@@ -242,7 +264,7 @@
 }
 
 @media (max-width: 400px) {
-    .get_offers_container {
+    .get_offers_card {
         padding: 1rem;
     }
 
@@ -255,5 +277,10 @@
                 min-height: 12px;
             }
         }
+    }
+}
+@media (max-width: 300px) {
+    .description {
+        font-size: 1rem;
     }
 }
