--- a/components/get-offers/getOffers.module.scss
+++ b/components/get-offers/getOffers.module.scss
@@ -242,10 +242,15 @@
 }
 
 @media (max-width: 600px) {
+    .parent_container{
+        margin-top: 1rem;
+        margin-bottom: 4rem;
+    }
     .get_offers_card {
         padding: 1.5rem;
         border-radius: 10px;
-        margin-top: 3rem;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
     }
 
     .options {
@@ -260,6 +265,9 @@
                 min-height: 13px;
             }
         }
+    }
+    .description {
+        font-size: 1rem;
     }
 }
 
@@ -277,10 +285,5 @@
                 min-height: 12px;
             }
         }
-    }
-}
-@media (max-width: 300px) {
-    .description {
-        font-size: 1rem;
     }
 }
